--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "benchmark": "^2.1.4",
-    "declarative-js": "^3.4.0",
-    "linq": "^3.2.0",
-    "uuid": "^3.3.2"
+    "declarative-js": "3.7.3",
+    "linq": "3.2.0",
+    "lodash": "4.17.15",
+    "uuid": "3.3.2"
   }
 }
