--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "benchmark": "^2.1.4",
-    "declarative-js": "3.7.4",
+    "array-uniq": "2.1.0",
+    "benchmark": "2.1.4",
+    "core-js": "^2.6.10",
+    "declarative-js": "3.8.5",
     "linq": "3.2.0",
     "lodash": "4.17.15",
     "uuid": "3.3.2"
