--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "array-uniq": "2.1.0",
     "benchmark": "2.1.4",
+    "alasql": "0.5.1",
     "core-js": "^2.6.10",
-    "declarative-js": "3.8.6",
+    "declarative-js": "3.8.8",
     "linq": "3.2.0",
     "lodash": "4.17.15",
     "uuid": "3.3.2"
